--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Agriculture</string>
+    <string name="login_name">Log in</string>
 
     <string name="title_section1">商品</string>
     <string name="title_section2">资讯</string>
@@ -11,4 +12,5 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_product_detail_info">ProductDetailInfoActivity</string>
 </resources>
